# KMC_UNITA

./: .gitignore  .gitmodules  Dockerfile  README.md  README2.md  entrypoint.sh
Mobility_Challenge_Simulator/: README.md
Mobility_Challenge_Simulator/src/communication_manager/: CMakeLists.txt  package.xml
Mobility_Challenge_Simulator/src/hv_handler/: package.xml
Mobility_Challenge_Simulator/src/simulator/: .clang-format  CMakeLists.txt
Mobility_Challenge_Simulator/src/simulator/resource/: config.ini
Mobility_Challenge_Simulator/src/simulator/resource/assets/: map.json  path.json
Mobility_Challenge_Simulator/src/simulator/resource/font/: CascadiaMono.json
Mobility_Challenge_Simulator/src/simulator/resource/shader/: 2Dsprite.frag  2Dsprite.vert  3Dobject.vert  fAntialiasing.frag  post.frag  post.vert
Mobility_Challenge_Simulator/src/simulator/src/: pch.hpp
Mobility_Challenge_Simulator/src/simulator/src/app/: plugins.hpp
Mobility_Challenge_Simulator/src/simulator/src/app/components/: user.hpp  vehicle.hpp  worldsetting.hpp
Mobility_Challenge_Simulator/src/simulator/src/app/functions/: vehicle.cpp
Mobility_Challenge_Simulator/src/simulator/src/app/plugins/: mapload.cpp  ros.cpp
Mobility_Challenge_Simulator/src/simulator/src/engine/: defaults.hpp  ecs.hpp  world.hpp
Mobility_Challenge_Simulator/src/simulator/src/engine/components/: camera.hpp  events.hpp  mouse.hpp  physics.hpp  render.hpp
Mobility_Challenge_Simulator/src/simulator/src/engine/plugins/: mouse.cpp  physics.cpp  render.cpp
Mobility_Challenge_Simulator/src/simulator/src/engine/world/: assets.hpp  events.hpp  render.hpp  rosnode.hpp
Mobility_Challenge_Simulator/tool/: path_generator.py
Mobility_Challenge_Simulator/tool/waypoint/: 10_13.csv  14_17.csv  15_18.csv  15_60.csv  18_21.csv  19_22.csv  1_3.csv  20_23.csv  21_24.csv  21_51.csv  24_27.csv  25_28.csv  26_29.csv  28_31.csv  28_32.csv  29_2.csv  30_1.csv  35_28.csv  37_39.csv  38_41.csv  3_6.csv  40_63.csv  41_42.csv  42_8.csv  44_63.csv  45_62.csv  47_41.csv  49_59.csv  50_48.csv  51_55.csv  55_12.csv  56_52.csv  57_47.csv  57_53.csv  5_45.csv  5_8.csv  63_34.csv  6_44.csv  7_10.csv  8_11.csv  (+1 more)
map_visualizer/: CMakeLists.txt  README.md
map_visualizer/include/map_visualizer/: simpleIni.h
map_visualizer/launch/: visualize.launch.py
map_visualizer/src/: cav_visualizer_node.cpp  map_visualizer_node.cpp
pure_pursuit_controller/: CMakeLists.txt  package.xml
pure_pursuit_controller/config/: 1_to_2_bridge.yaml  21_51_46.json  21_51_fixed.json  27_30_1_3_6.json  27_30_1_3_6_fixed.json  28_31_1_3_5.json  28_31_1_3_5_front.json  28_31_1_3_5_lane2.json  2_to_1_bridge.yaml  3bridge.yaml  44.json  48_58.json  48_58_fixed.json  49_55.json  49_55_fixed.json  4bridge.yaml  52_24.json  52_24_fixed.json  55_12.json  61_47_fixed.json  8_11.json  8_11_fixed.json  9_56.json  9_56_fixed.json  CAV_01_1_fixed.json  CAV_01_3.json  CAV_02_3.json  CAV_03_3.json  CAV_04_3.json  cav10_bridge.yaml  cav12_bridge.yaml  cav1_bridge.yaml  cav2_bridge.yaml  cav3_bridge.yaml  cav4_bridge.yaml  cav5_bridge.yaml  cav6_bridge.yaml  cav7_bridge.yaml  cav9_bridge.yaml  cav_params.yaml  (+6 more)
pure_pursuit_controller/include/pure_pursuit_controller/: collision_checker.hpp  controller.hpp  ekf.hpp
pure_pursuit_controller/launch/: bridge_launch.py  competition.launch.py  quiz3_launch.py
pure_pursuit_controller/src/: pure_pursuit_node.cpp  pure_pursuit_viz_node.cpp  quiz2.cpp  quiz3.cpp  readme.md
src/communication_manager/src/: pose_sharing_handler.cpp
src/hv_handler/: CMakeLists.txt
src/hv_handler/config/: belt_lane_one.json  belt_lane_two.json  hv_params.yaml
src/hv_handler/include/hv_handler/: hv_problem_three.hpp  hv_problem_two.hpp
src/map_visualizer/: package.xml
src/map_visualizer/src/: cav_visualizer_node.cpp  map_visualizer_node.cpp
src/pure_pursuit_controller/: CMakeLists.txt  package.xml
src/pure_pursuit_controller/config/: 21_51.json  21_51_46_fixed.json  22_25.json  22_25_fixed.json  28_31_1_3_5_back.json  28_31_1_3_5_change.json  28_31_1_3_5_cross.json  51_46.json  51_46_fixed.json  55_12_fixed.json  56_59.json  56_59_fixed.json  60_52.json  60_52_fixed.json  61_47.json  61_47_fixed.json  CAV_01_3.json  CAV_01_3_0208.json  CAV_01_3_final.json  CAV_01_3_final_fixed.json  CAV_01_3_fixed.json  CAV_01_3_fixed_fixed.json  CAV_01_3_fixed_fixed_fixed.json  CAV_01_3_fixed_fixed_fixed_fixed.json  CAV_01_3_fixed_fixed_fixed_fixed_fixed.json  CAV_01_3_fixed_fixed_fixed_fixed_fixed_fixed.json  CAV_01_3_fixed_fixed_fixed_fixed_fixed_fixed_fixed.json  CAV_02_1.json  CAV_02_3.json  CAV_02_3_final.json  CAV_02_3_final_hdi.json  CAV_02_3_final_hdi_fixed.json  CAV_02_3_final_sjs1.json  CAV_02_3_final_sjs2.json  CAV_02_3_fixed.json  (+68 more)
src/scene_srv/: CMakeLists.txt  package.xml
src/simulator/: build.sh  package.xml
src/simulator/include/: glad.h  json.hpp
src/simulator/msg/: CustomMessage.msg
src/simulator/resource/assets/: map.mtl
src/simulator/resource/shader/: 2Dtext.frag  2Dtext.vert  3Dobject.frag  fComposite.frag
src/simulator/src/app/: app.cpp
src/simulator/src/app/components/: collision.hpp  map.hpp  ros.hpp
src/simulator/src/app/functions/: vehicle.hpp
src/simulator/src/app/plugins/: collision.cpp  user.cpp  vehicle.cpp  worldsetting.cpp
src/simulator/src/engine/: engine.hpp  entry.cpp  scenes.hpp
src/simulator/src/engine/plugins/: camera.cpp
src/simulator/src/engine/world/: pipeline.hpp  shader.hpp  source.hpp  window.hpp
tool/: cav1_circle_enter.json  cav2_circle_enter.json  cav4_circle_enter.json  hv_roundabout.csv  path_24_37.csv  path_25_36.csv  path_25_36.json  path_viz.py
tool/waypoint/: 11_16.csv  12_15.csv  13_14.csv  16_19.csv  16_61.csv  17_20.csv  22_25.csv  22_50.csv  23_26.csv  24_37.csv  25_36.csv  27_30.csv  2_4.csv  31_1.csv  32_5.csv  33_31.csv  34_27.csv  36_38.csv  38_48.csv  39_40.csv  39_49.csv  3_33.csv  40_43.csv  41_62.csv  43_9.csv  46_40.csv  48_53.csv  48_58.csv  49_55.csv  4_7.csv  50_54.csv  51_46.csv  52_24.csv  53_25.csv  54_11.csv  56_59.csv  58_19.csv  59_18.csv  60_46.csv  60_52.csv  (+8 more)
(+25 files in other folders)
