<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator</name>
  <version>1.0.0</version>
  <description>Robot simulation package with custom messages</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>scene_srv</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>libx11-dev</depend>
  <depend>libxext-dev</depend>
  <depend>libxrandr-dev</depend>
  <depend>libxcursor-dev</depend>
  <depend>libxfixes-dev</depend>
  <depend>libxi-dev</depend>
  <depend>libudev-dev</depend>
  <depend>libgl-dev</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
